examples/kubernetes/quickstarts/heimdall/heimdall-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: heimdall
  namespace: heimdall
spec:
  forwardAuth:
    address: "https://heimdall.heimdall.svc.cluster.local:4455"
    tls:
      caSecret: heimdall-tls
    authResponseHeaders:
      - Authorization
