examples/kubernetes/quickstarts/heimdall/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: ReferenceGrant
metadata:
  name: ext-auth-heimdall-rg-hr
  namespace: heimdall
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: default
  to:
    - group: ""
      kind: Service
      name: heimdall
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: ReferenceGrant
metadata:
  name: ext-auth-heimdall-rg-gr
  namespace: heimdall
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: GRPCRoute
      namespace: default
  to:
    - group: ""
      kind: Service
      name: heimdall
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: ReferenceGrant
metadata:
  name: ext-auth-heimdall-rg-gw
  namespace: heimdall
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: default
  to:
    - group: ""
      kind: Service
      name: heimdall
