examples/kubernetes/quickstarts/heimdall/envoygw-security-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: ext-auth-heimdall
  namespace: heimdall
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
  extAuth:
    grpc:
      backendRefs:
        - name: heimdall
          port: 4456
          namespace: heimdall
---
