examples/kubernetes/quickstarts/heimdall/istio-envoy-filter.yaml
# this filter enables HTTP 2 for GRPC based communication with heimdall
# without it istio configured envoy to use HTTP 1.1, which doesn't work
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: http2-protocol-for-heimdall
  namespace: istio-gw
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
    - applyTo: CLUSTER
      match:
        context: GATEWAY
        cluster:
          name: outbound|4456||heimdall.heimdall.svc.cluster.local
      patch:
        operation: MERGE
        value:
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              explicit_http_config:
                http2_protocol_options: {}
