examples/kubernetes/quickstarts/heimdall/istio-authorization-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: heimdall
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-gw
  action: CUSTOM
  provider:
    name: heimdall
  rules:
    - {}
